fix textarea covering form submit

--- a/client/styles/admin.css
+++ b/client/styles/admin.css
@@ -11,7 +11,7 @@
 	background: #2ecc71;
 	color: white;
 }
-.form-group {
+.input-container {
 	height: 55px;
     margin-bottom: 10px;
 }
